<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_image_popup">ImagePopupActivity</string>
    <string name="title_activity_search_option">SearchOptionActivity</string>
    <string name="search_option_image_size_label">Image Size</string>
    <string name="search_option_image_size_promt">Choose image size</string>
    <string name="search_option_color_label">Color Filter</string>
    <string name="search_option_color_prompt">Choose color</string>
    <string name="search_option_type_label">Image Type</string>
    <string name="search_option_type_prompt">Choose image type</string>
    <string name="search_option_site_label">Site Filter</string>
    <string name="search_option_site_hint">Type a site to search</string>
    
    <!-- These are generally for a Button but can be used for anything else -->
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

</resources>
