<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchOptionActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search_option_image_size_label" />
	
	    <Spinner
	        android:id="@+id/spinner1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/search_option_image_size"
	        android:prompt="@string/search_option_image_size_promt" />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/search_option_color_label" />
		
		    <Spinner
		        android:id="@+id/spinner2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/search_option_color"
		        android:prompt="@string/search_option_color_prompt" />        
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_option_type_label" />
    
        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/search_option_type"
            android:prompt="@string/search_option_type_prompt" />        
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_option_site_label" />
    
        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_option_site_hint" />        
        
    </LinearLayout>
    


    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
